# mold

./: .gitignore  Cargo.toml  README.md
src/: lib.rs  main.rs
src/cli/: args.rs  mod.rs
src/generators/: mod.rs  prisma.rs  typescript.rs  zod.rs
src/generators/prisma/: mod.rs  relations.rs  types.rs
src/generators/typescript/: mod.rs  types.rs
src/generators/zod/: mod.rs  types.rs
src/parser/: inference.rs  json.rs  mod.rs  patterns.rs
src/types/: error.rs  field.rs  mod.rs  object.rs  schema.rs
src/utils/: file.rs  mod.rs  naming.rs
tests/: integration.rs
tests/fixtures/: user.json
